k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: python-app
spec:
  rules:
  # - host: "python-app.test.com"
  - http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: python-app
            port: 
              number: 8080
